Updated manifest, minor changes

--- a/app/options.html
+++ b/app/options.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+<head>
+    <meta charset="utf-8">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -8,9 +9,9 @@
     <!-- build:css styles/main.css -->
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
-  </head>
-  <body>
-    <h1>'Allo, 'Allo!</h1>
+</head>
+<body>
+    <h1>Hello world!</h1>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -20,5 +21,5 @@
     <!-- build:js scripts/options.js -->
     <script src="scripts/options.js"></script>
     <!-- endbuild -->
-  </body>
+</body>
 </html>
