--- a/app/newtab.html
+++ b/app/newtab.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/main.css -->
-    <link href="styles/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css"/>
     <!-- endbuild -->
-  </head>
-  <body>
-    <h1>'Allo, 'Allo!</h1>
+</head>
+<body>
+    <h1>Hello world!</h1>
+    <div id="apps"></div>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js scripts/popup.js -->
-    <script src="scripts/popup.js"></script>
+    <!-- build:js scripts/newtab.js -->
+    <script src="scripts/newtab.js"></script>
     <!-- endbuild -->
-  </body>
+</body>
 </html>
