--- a/app/newtab.html
+++ b/app/newtab.html
@@ -4,23 +4,31 @@
     <meta charset="utf-8">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css"/>
+    <!-- build:css styles/newtab.css -->
+    <link rel="stylesheet" href="styles/fonts.css"/>
     <!-- endbuild -->
 </head>
-<body>
-    <h1>Hello world!</h1>
-    <div id="apps"></div>
+<body ng-app="newtab" ng-controller="NewtabCtrl">
+
+    <md-button class="md-primary md-fab md-fab-bottom-right" ng-click="openDialog($event)">
+        <md-icon md-svg-src="images/add.svg"></md-icon>
+    </md-button>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/newtab.js -->
     <script src="scripts/newtab.js"></script>
+    <script src="scripts/controllers/newtab.js"></script>
     <!-- endbuild -->
 </body>
 </html>
