--- a/app/options.html
+++ b/app/options.html
@@ -4,17 +4,22 @@
     <meta charset="utf-8">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css styles/main.css -->
-    <link href="styles/main.css" rel="stylesheet">
+    <!-- build:css styles/options.css -->
+    <link rel="stylesheet" href="styles/fonts.css"/>
+    <link rel="stylesheet" href="styles/options.css"/>
     <!-- endbuild -->
 </head>
-<body>
-    <h1>Hello world!</h1>
+<body ng-app="options">
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
