--- a/app/newtab.html
+++ b/app/newtab.html
@@ -30,5 +30,10 @@
     <script src="scripts/newtab.js"></script>
     <script src="scripts/controllers/newtab.js"></script>
     <!-- endbuild -->
+
+    <!-- build:dev -->
+    <script src="bower_components/livereload/dist/livereload.js?host=localhost&port=35729"></script>
+    <!-- endbuild -->
+
 </body>
 </html>
