--- a/app/newtab.html
+++ b/app/newtab.html
@@ -5,15 +5,30 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/newtab.css -->
     <link rel="stylesheet" href="styles/fonts.css"/>
+    <link rel="stylesheet" href="styles/newtab.css"/>
     <!-- endbuild -->
 </head>
-<body ng-app="newtab" ng-controller="NewtabCtrl">
+<body ng-app="charttab" ng-controller="NewtabCtrl">
 
-    <md-button class="md-primary md-fab md-fab-bottom-right" ng-click="openDialog($event)">
+    <div layout="row" layout-wrap>
+        <div class="chart" flex="25" flex-lg="33" flex-md="50" flex-sm="100" ng-repeat="chart in charts">
+            <md-card>
+                <md-card-content>
+                    <p class="result">{{chart.result}} of {{chart.goal}}</p>
+                    <h2 class="title">{{chart.title}}</h2>
+                    <canvas class="chart chart-line" data="chart.data" labels="chart.labels" options="chart.options">
+                    </canvas>
+                </md-card-content>
+            </md-card>
+        </div>
+    </div>
+
+    <md-button class="md-primary md-fab md-fab-bottom-right" aria-label="Add key result" ng-click="addKr($event)">
         <md-icon md-svg-src="images/add.svg"></md-icon>
     </md-button>
 
@@ -23,12 +38,21 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/newtab.js -->
-    <script src="scripts/newtab.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/controllers/newtab.js"></script>
+    <script src="scripts/controllers/add-kr.js"></script>
+    <script src="scripts/services/dialog.js"></script>
+    <script src="scripts/services/krs.js"></script>
+    <script src="scripts/services/charts.js"></script>
     <!-- endbuild -->
 
     <!-- build:dev -->
