--- a/app/options.html
+++ b/app/options.html
@@ -5,6 +5,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/options.css -->
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="styles/options.css"/>
     <!-- endbuild -->
 </head>
-<body ng-app="options">
+<body ng-app="charttab">
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -20,11 +21,15 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/options.js -->
-    <script src="scripts/options.js"></script>
+    <script src="scripts/app.js"></script>
     <!-- endbuild -->
 </body>
 </html>
