implemented charts deleting

--- a/app/newtab.html
+++ b/app/newtab.html
@@ -44,6 +44,7 @@
     <script src="scripts/controllers/page.js"></script>
     <script src="scripts/controllers/add-key-result.js"></script>
     <script src="scripts/controllers/update-value.js"></script>
+    <script src="scripts/controllers/delete-confirm.js"></script>
     <script src="scripts/directives/chart.js"></script>
     <script src="scripts/services/krs.js"></script>
     <script src="scripts/services/charts.js"></script>
