implemented backup/restore of charts data

--- a/app/newtab.html
+++ b/app/newtab.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/newtab.css"/>
     <!-- endbuild -->
 </head>
-<body ng-app="charttab" ng-controller="PageCtrl">
+<body ng-app="charttab" ng-controller="NewTabCtrl">
 
     <div layout="row" layout-wrap>
         <div flex="25" flex-lg="33" flex-md="50" flex-sm="100" ng-repeat="chart in charts">
@@ -41,7 +41,7 @@
     <!-- build:js scripts/newtab.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
-    <script src="scripts/controllers/page.js"></script>
+    <script src="scripts/controllers/newtab.js"></script>
     <script src="scripts/controllers/add-key-result.js"></script>
     <script src="scripts/controllers/update-value.js"></script>
     <script src="scripts/controllers/delete-confirm.js"></script>
