--- a/app/options.html
+++ b/app/options.html
@@ -50,7 +50,8 @@
     <script src="scripts/config.js"></script>
     <script src="scripts/controllers/options.js"></script>
     <script src="scripts/directives/file.js"></script>
-    <script src="scripts/services/krs.js"></script>
+    <script src="scripts/services/storage.js"></script>
+    <script src="scripts/services/uuid.js"></script>
     <!-- endbuild -->
 </body>
 </html>
