--- a/app/options.html
+++ b/app/options.html
@@ -18,7 +18,7 @@
     <file id="file" ng-model="importFile" ng-change="importData()" accept="application/json"></file>
 
     <md-list>
-        <md-list-item>
+        <md-list-item class="has-buttons">
             <p>Backup/Restore:</p>
             <md-button href="{{exportFile}}" download="charttab-backup_{{today}}.json">
                 <md-icon md-svg-src="images/file-download.svg"></md-icon>
