--- a/app/newtab.html
+++ b/app/newtab.html
@@ -81,12 +81,13 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/controllers/newtab.js"></script>
-    <script src="scripts/controllers/add-key-result.js"></script>
+    <script src="scripts/controllers/key-result-form.js"></script>
     <script src="scripts/controllers/update-value.js"></script>
     <script src="scripts/controllers/delete-confirm.js"></script>
     <script src="scripts/directives/chart.js"></script>
     <script src="scripts/services/krs.js"></script>
     <script src="scripts/services/charts.js"></script>
+    <script src="scripts/services/ui.js"></script>
     <script src="scripts/services/uuid.js"></script>
     <!-- endbuild -->
 
