--- a/app/newtab.html
+++ b/app/newtab.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <!-- endbower -->
     <!-- endbuild -->
+
     <!-- build:css styles/newtab.css -->
     <link rel="stylesheet" href="styles/fonts.css"/>
     <link rel="stylesheet" href="styles/newtab.css"/>
@@ -15,103 +17,105 @@
     <link rel="stylesheet" href="styles/charts.css"/>
     <link rel="stylesheet" href="styles/bookmarks.css"/>
     <!-- endbuild -->
+
 </head>
-<body ng-app="charttab" ng-controller="NewTabCtrl" layout="column">
+<body ng-app="charttab" ng-controller="NewTabCtrl" layout="column" ng-cloak>
 
-    <md-toolbar>
-        <div class="md-toolbar-tools">
-            <md-button ng-click="page = pages.charts">
-                <md-icon md-svg-src="images/charts.svg"></md-icon>
-                Charts
-            </md-button>
-            <md-button ng-click="page = pages.bookmarks">
-                <md-icon md-svg-src="images/bookmark.svg"></md-icon>
-                Bookmarks
-            </md-button>
-            <md-button ng-click="page = pages.apps">
-                <md-icon md-svg-src="images/apps.svg"></md-icon>
-                Apps
-            </md-button>
-            <span flex></span>
-            <md-button ng-click="addKr($event)" ng-if="page === pages.charts">
-                <md-icon md-svg-src="images/add.svg"></md-icon>
-                Add chart
-            </md-button>
-            <md-button ng-click="addBookmark($event)" ng-if="page === pages.bookmarks">
-                <md-icon md-svg-src="images/add.svg"></md-icon>
-                Add bookmark
-            </md-button>
+<md-toolbar>
+    <div class="md-toolbar-tools">
+        <md-button ng-click="page = pages.charts">
+            <md-icon md-svg-src="images/charts.svg"></md-icon>
+            Charts
+        </md-button>
+        <md-button ng-click="page = pages.bookmarks">
+            <md-icon md-svg-src="images/bookmark.svg"></md-icon>
+            Bookmarks
+        </md-button>
+        <md-button ng-click="page = pages.apps">
+            <md-icon md-svg-src="images/apps.svg"></md-icon>
+            Apps
+        </md-button>
+        <span flex></span>
+        <md-button ng-click="addKr($event)" ng-if="page === pages.charts">
+            <md-icon md-svg-src="images/add.svg"></md-icon>
+            Add chart
+        </md-button>
+        <md-button ng-click="addBookmark($event)" ng-if="page === pages.bookmarks">
+            <md-icon md-svg-src="images/add.svg"></md-icon>
+            Add bookmark
+        </md-button>
+    </div>
+</md-toolbar>
+
+<md-content ng-if="page === pages.charts" flex>
+    <div layout="row" layout-wrap>
+        <div flex="{{chartFlex}}" ng-repeat="chart in charts track by chart.id">
+            <chart data="chart" height="chartHeight"></chart>
         </div>
-    </md-toolbar>
+    </div>
+    <div class="page-description" layout="column" layout-align="center center" ng-if="!charts.length && ready">
+        <h1 class="md-display-1">NO CHARTS YET</h1>
 
-    <md-content ng-if="page === pages.charts" flex>
-        <div layout="row" layout-wrap>
-            <div flex="{{chartFlex}}" ng-repeat="chart in charts track by chart.id">
-                <chart data="chart" height="chartHeight"></chart>
-            </div>
+        <h2 class="md-headline">Add a new one by pressing the "ADD CHART" button on the top.</h2>
+    </div>
+</md-content>
+
+<md-content ng-if="page === pages.bookmarks" flex>
+    <div layout="row" layout-wrap>
+        <div flex="{{bookmarkFlex}}" ng-repeat="bookmark in bookmarks track by bookmark.id">
+            <bookmark data="bookmark" height="bookmarkHeight"></bookmark>
         </div>
-        <div class="page-description" layout="column" layout-align="center center" ng-if="!charts.length && ready">
-            <h1 class="md-display-1">NO CHARTS YET</h1>
+    </div>
+    <div class="page-description" layout="column" layout-align="center center" ng-if="!bookmarks.length && ready">
+        <h1 class="md-display-1">NO BOOKMARKS YET</h1>
 
-            <h2 class="md-headline">Add a new one by pressing the "ADD CHART" button on the top.</h2>
-        </div>
-    </md-content>
+        <h2 class="md-headline">Add a new one by pressing the "ADD BOOKMARK" button on the top.</h2>
+    </div>
+</md-content>
 
-    <md-content ng-if="page === pages.bookmarks" flex>
-        <div layout="row" layout-wrap>
-            <div flex="{{bookmarkFlex}}" ng-repeat="bookmark in bookmarks track by bookmark.id">
-                <bookmark data="bookmark" height="bookmarkHeight"></bookmark>
-            </div>
-        </div>
-        <div class="page-description" layout="column" layout-align="center center" ng-if="!bookmarks.length && ready">
-            <h1 class="md-display-1">NO BOOKMARKS YET</h1>
+<md-content ng-if="page === pages.apps" flex>
+    <div class="page-description" layout="column" layout-align="center center">
+        <h1 class="md-display-1">APPS ARE COMING SOON</h1>
 
-            <h2 class="md-headline">Add a new one by pressing the "ADD BOOKMARK" button on the top.</h2>
-        </div>
-    </md-content>
+        <h2 class="md-headline">It will be a list of ready-to-launch applications installed in your Chrome.</h2>
+    </div>
+</md-content>
 
-    <md-content ng-if="page === pages.apps" flex>
-        <div class="page-description" layout="column" layout-align="center center">
-            <h1 class="md-display-1">APPS ARE COMING SOON</h1>
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-aria/angular-aria.js"></script>
+<script src="bower_components/angular-messages/angular-messages.js"></script>
+<script src="bower_components/angular-material/angular-material.js"></script>
+<script src="bower_components/Chart.js/Chart.js"></script>
+<script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+<script src="bower_components/moment/moment.js"></script>
+<script src="bower_components/angular-moment/angular-moment.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
-            <h2 class="md-headline">It will be a list of ready-to-launch applications installed in your Chrome.</h2>
-        </div>
-    </md-content>
+<!-- build:js scripts/newtab.js -->
+<script src="scripts/app.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/controllers/newtab.js"></script>
+<script src="scripts/controllers/key-result-form.js"></script>
+<script src="scripts/controllers/bookmark-form.js"></script>
+<script src="scripts/controllers/update-value.js"></script>
+<script src="scripts/controllers/delete-bookmark.js"></script>
+<script src="scripts/controllers/delete-kr.js"></script>
+<script src="scripts/directives/bookmark.js"></script>
+<script src="scripts/directives/chart.js"></script>
+<script src="scripts/services/krs.js"></script>
+<script src="scripts/services/bookmarks.js"></script>
+<script src="scripts/services/charts.js"></script>
+<script src="scripts/services/ui.js"></script>
+<script src="scripts/services/uuid.js"></script>
+<!-- endbuild -->
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
-    <script src="bower_components/Chart.js/Chart.js"></script>
-    <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
-    <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/angular-moment/angular-moment.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js scripts/newtab.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/config.js"></script>
-    <script src="scripts/controllers/newtab.js"></script>
-    <script src="scripts/controllers/key-result-form.js"></script>
-    <script src="scripts/controllers/bookmark-form.js"></script>
-    <script src="scripts/controllers/update-value.js"></script>
-    <script src="scripts/controllers/delete-bookmark.js"></script>
-    <script src="scripts/controllers/delete-kr.js"></script>
-    <script src="scripts/directives/bookmark.js"></script>
-    <script src="scripts/directives/chart.js"></script>
-    <script src="scripts/services/krs.js"></script>
-    <script src="scripts/services/bookmarks.js"></script>
-    <script src="scripts/services/charts.js"></script>
-    <script src="scripts/services/ui.js"></script>
-    <script src="scripts/services/uuid.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:dev -->
-    <script src="bower_components/livereload/dist/livereload.js?host=localhost&port=35729"></script>
-    <!-- endbuild -->
+<!-- build:dev -->
+<script src="bower_components/livereload/dist/livereload.js?host=localhost&port=35729"></script>
+<!-- endbuild -->
 
 </body>
 </html>
