--- a/app/newtab.html
+++ b/app/newtab.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>New Tab</title>
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
