update dependencies, add packege-lock

--- a/app/newtab.html
+++ b/app/newtab.html
@@ -46,7 +46,7 @@
             Add bookmark
         </md-button>
         <md-divider class="vertical-divider"></md-divider>
-        <md-button class="md-icon-button" ng-click="vm.changeConfig($event)">
+        <md-button class="md-icon-button" aria-label="Open settings dialog" ng-click="vm.changeConfig($event)">
             <md-icon md-svg-src="images/settings.svg"></md-icon>
         </md-button>
     </div>
